# DrivAerML

./: .experiment  .gitignore  BASELINE.md  OPTIMIZED_LINEAGE.md  README.md  aggregate_h235.py  analyze_tta.py  bias_corrected_ensemble.py  bias_diagnostic.py  case_cdf_sampler.py  check_all_running.py  check_all_waves.py  check_epochs.py  check_epochs2.py  check_epochs3.py  check_remaining_prs.py  check_runs.py  curvature_dataset.py  curvature_normalization.json  curvature_proxy_stats_k16_v1.json  curvature_stats.json  diag_tta.py  download_h235.py  ensemble_eval.py  eval_direction_magnitude.py  eval_from_checkpoint.py  eval_h144_dual.py  eval_h271_sobol_tta.py  eval_h272_hutchinson_tta.py  eval_h273_taylor2_tta.py  eval_h280_sobol_antithetic_tta.py  eval_multi_res.py  eval_raw.py  eval_tta_h209.py  eval_tta_h223.py  eval_tta_h229.py  eval_tta_h231.py  eval_tta_h233.py  eval_tta_h238.py  eval_tta_h239.py  (+63 more)
.senpai_assignments/: tanjiro-rff-spectral-density.md
analysis/: SDF_COVERAGE_REPORT.md  STATUS_2026-05-02T09:18_tay_fleet-status.md  STATUS_2026-05-02T1730_tay_round21-fleet-check.md  STATUS_2026-05-05-1430_drivaerml-long-20260504_fleet-check.md  aggregate_per_case_test_metrics.py  per_case_test_predictions_4k25s25e.npz  per_case_test_predictions_dc031qpt.npz  phase0_tables.md  run_per_case_test_eval.py  sdf_per_case_hists.npz  sdf_per_case_stats.csv
assignments/: dl24-tanjiro-ysym-p1.md
data/: __init__.py  curvature_sampler.py  generate_manifest.py  loader.py  precompute_curvature.py  preload.py  spatial_prior_sampler.py  split_manifest.json  split_utils.py
(+182 files in other folders)
