[project]
name = "drivaerml"
version = "0.1.0"
description = "Surface-pressure DrivAerML benchmark package for senpai autoresearch"
authors = [
    { name = "Morgan McGuire" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "torch",
    "tqdm",
    "wandb",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["train"]

[tool.setuptools.packages.find]
include = ["data*"]
